Add phpunit testing, including db migrations used only for testing purposes

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
                 "SoareCostin\\LaravelToggleSwitchFields\\ToggleSwitchFieldsServiceProvider"
             ],
             "aliases": {
-                "SwitchableField": "SoareCostin\\LaravelToggleSwitchFields\\Facades\\ToggleSwitchFields"
+                "ToggleSwitchFields": "SoareCostin\\LaravelToggleSwitchFields\\Facades\\ToggleSwitchFields"
             }
         }
     }    
