--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": ">=7.2.0",
         "illuminate/support": "^5.8"
     },
     "require-dev": {
